--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,15 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-redux": "^7.1.24",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.51.0"
   },
   "devDependencies": {
