--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.7.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-redux": "^7.1.24",
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
